# ramp-metering-main

./: .gitignore  .gitignore.save  CLAUDE.md  LICENSE  PROJECT_ANALYSIS.md  README.md  evaluate.py  observe.py  play.py  pyproject.toml  train.py
diagnostics/: observe_smooth.py  watch_lcc.py
dqn/: __init__.py  agent.py  env_make.py  env_wrap.py  network.py  replay_memory.py
dqn/utils/: __init__.py  better_abc.py  msgpack_numpy.py  sum_tree.py
dqn/utils/baselines_wrappers/: __init__.py  dummy_vec_env.py  monitor.py  subproc_vec_env.py  util.py  vec_env.py  wrappers.py
env/: __init__.py  dqn_config.py  dqn_env.py  view.py
env/custom_env/: __init__.py  baselines.py  rl_controller.py  sumo_env.py  utils.py
env/custom_env/data/1ramp_1x3/: 1ramp_1x3.add.xml  1ramp_1x3.net.xml  1ramp_1x3.rou.xml  1ramp_1x3.sumocfg  gui-settings.cfg  tripinfo.xml
env/custom_env/data/1ramp_1x3/induction_loop_data/: bottle_neck_sens_0.xml  bottle_neck_sens_1.xml  bottle_neck_sens_2.xml  bottle_neck_sens_3.xml  demand_sens.xml  merge_start_sens.xml  outflow_sens_0.xml  outflow_sens_1.xml  outflow_sens_2.xml  passage_queue_sens.xml  passage_sens.xml  queue_sens.xml  up_stream_sens_0.xml  up_stream_sens_00.xml  up_stream_sens_1.xml  up_stream_sens_11.xml  up_stream_sens_2.xml  (+1 more)
env/custom_env/lane_control/: RMLCC.md  dqn_config.py  rl_controller.py
env/custom_env/lane_control_macro_only/: rl_controller.py
env/custom_env/macro no lane/: rl_controller_macro_no_lane.py
env/custom_env/macro with lane/: dqn_config.py  rl_controller_macro_lane.py  sumo_env.py  utils.py
env/custom_env/micro + macro lane/: dqn_config.py  rl_controller.py  utils.py
env/custom_env/rm_lcc_macro_with_changeLane/: __init__.py  dqn_config.py  rl_controller.py
env/custom_env/rm_lcc_macro_with_setAllowed/: dqn_config.py  rl_controller.py
env/custom_env/rm_lcc_macro_with_setMaxSpeed/: dqn_config.py  rl_controller.py
env/custom_env/rm_only_macro/: dqn_config.py  rl_controller.py
evaluation/: parsers.py
evaluation/benchmarks/: results_AlineaDsBaseline.csv  results_AlwaysGreenBaseline.csv  results_DQNAgentBasic.csv  results_DQNAgentHybridFull.csv  results_DQNAgentHybridFull_NEW.csv  results_DQNAgentHybridPartial.csv  results_DQNAgentHybridPartialPer.csv  results_DQNAgentMacroLane.csv  results_DQNAgentMacroNoLaneNew.csv  results_DQNAgentMacroNoLaneOld.csv  results_DQNAgent_lane_control_macro_only_new.csv  results_DQNAgent_ramp_metering_lane_control_hybrid.csv  results_FixedCycleBaseline.csv  results_PiAlineaDsBaseline.csv  rm_lcc_setMaxSpeed.csv
evaluation/notebooks/: analysis.ipynb  parsers.py  reward.ipynb
evaluation/notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb  reward-checkpoint.ipynb
save/1ramp_1x3/: DuelingDoubleDQNAgent_lr0.0001_model.pack
save/1ramp_1x3/09-06-2026/: DuelingDoubleDQNAgent_lr0.0001_model.pack
save/1ramp_1x3/lane_control_macro_only/: DuelingDoubleDQNAgent_lr0.0001_model.pack
save/1ramp_1x3/ramp_metering_lane_control_hybrid/: DuelingDoubleDQNAgent_lr0.0001_model.pack
