[project]
name = "Ramp-Metering-PFE"
version = "0.1.0"
description = "DQN-based ramp metering control for a SUMO highway corridor."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "cloudpickle==2.2.1",
    "colorama==0.4.6",
    "gymnasium==0.28.1",
    "msgpack==1.0.2",
    "numpy==1.21.6",
    "pandas==1.3.5",
    "tensorboard==2.11.2",
    "torch==1.13.1",
    "tqdm==4.64.1",
    "sumolib==1.26.0",
    "traci==1.26.0",
    "setuptools>=65.5.1,<82",
]

[project.optional-dependencies]
analysis = [
    "ipykernel>=6.29.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.8.0",
    "plotly==5.18.0",
    "scipy==1.7.3",
    "seaborn==0.12.2",
]


# Ruff
# From the project root, with your uv + Ruff setup:
# `uv run ruff check --fix .`

# That applies all safe auto-fixes from the enabled lint rules (fixable = ["ALL"] in your config).
# To also apply formatting:
# `uv run ruff format .`

# Or both in one go:
# `uv run ruff check --fix . && uv run ruff format .`

# For fixes Ruff marks as unsafe (not applied by default):
# `uv run ruff check --fix --unsafe-fixes`.

[dependency-groups]
dev = [
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "logs",
    "save",
    "tripinfo_runs",
    "evaluation/notebooks",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by the formatter)
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["dqn", "env", "evaluation"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv]
package = false
